changing last to 5e4 and remove demean in batchsize_thresholdcpp()

--- a/AR_methods/batchsize_comparison.Rmd
+++ b/AR_methods/batchsize_comparison.Rmd
@@ -128,8 +128,8 @@ batchSize_threshold_cpp <- function(x, method = "bm", g = NULL) {
     stop("'x' must be numeric")
   if(any(is.na(x) != is.na(x[,1]))) stop("NAs in 'x' must be the same row-wise")
   p <- ncol(x)
-  xm <- colMeans(x, na.rm=TRUE)
-  x <- sweep(x, 2L, xm, check.margin=FALSE)
+  # xm <- colMeans(x, na.rm=TRUE)
+  # x <- sweep(x, 2L, xm, check.margin=FALSE)
   n <- sum(!is.na(x[,1])) # number of non-missing rows
   chain <- as.matrix(x)
   if(!is.matrix(chain) && !is.data.frame(chain))
@@ -189,7 +189,7 @@ batchSize_threshold_cpp_last <- function(x, method = "bm", g = NULL) {
   }
   order.max <- min(p, n - 1L, floor(10 * log10(n))) 
   xacf = matrix(, nrow = order.max+1, ncol = p)
-  last = min(n, 1e4)
+  last = min(n, 5e4)
   chain2 = chain[(n-last+1):n,]
   for(i in 1:p) {
     xacf[,i] = acf(chain2[,i], type = "covariance", lag.max = order.max, plot = FALSE,
@@ -226,6 +226,10 @@ h = 0.5
 ans = RWMH(n, init, h)
 
 ```
+```{r}
+benchmark(replications = 1e1, batchSize_threshold_cpp_last(ans), batchSize_threshold_cpp(ans))
+```
+
 ```{r}
 benchmark(replications = 1e1, batchSize_threshold_cpp_last(ans), batchSize_threshold_cpp(ans), batchSize_threshold_R(ans), batchSize(ans))
 
