--- a/AR_methods/batchsize_comparison.Rmd
+++ b/AR_methods/batchsize_comparison.Rmd
@@ -126,10 +126,9 @@ batchSize_threshold_cpp <- function(x, method = "bm", g = NULL) {
 
   if(!is.numeric(x))
     stop("'x' must be numeric")
-  if(any(is.na(x) != is.na(x[,1]))) stop("NAs in 'x' must be the same row-wise")
+  if(any(is.na(x)))
+    stop("NAs found")
   p <- ncol(x)
-  # xm <- colMeans(x, na.rm=TRUE)
-  # x <- sweep(x, 2L, xm, check.margin=FALSE)
   n <- sum(!is.na(x[,1])) # number of non-missing rows
   chain <- as.matrix(x)
   if(!is.matrix(chain) && !is.data.frame(chain))
@@ -148,13 +147,8 @@ batchSize_threshold_cpp <- function(x, method = "bm", g = NULL) {
     }
   }
   order.max <- min(p, n - 1L, floor(10 * log10(n))) 
-  xacf = matrix(, nrow = order.max+1, ncol = p)
-  for(i in 1:p) {
-    xacf[,i] = acf(chain[,i], type = "covariance", lag.max = order.max, plot = FALSE,
-                 demean=TRUE, na.action = na.pass)$acf
-  }
-  # xacf <- acf(chain, type = "covariance", lag.max = order.max, plot = FALSE,
-  #               demean=TRUE, na.action = na.pass)$acf
+  xacf = sapply(1:p, function(i) acf(chain[,i], type = "covariance", lag.max = order.max, plot = FALSE,
+                                       demean=TRUE, na.action = na.pass)$acf)
   
   b = batchsize_cpp(n, p, xacf, order.max, method)
   return(b)
@@ -166,10 +160,9 @@ batchSize_threshold_cpp_last <- function(x, method = "bm", g = NULL) {
 
   if(!is.numeric(x))
     stop("'x' must be numeric")
-  if(any(is.na(x) != is.na(x[,1]))) stop("NAs in 'x' must be the same row-wise")
+  if(any(is.na(x)))
+    stop("NAs found")
   p <- ncol(x)
-  # xm <- colMeans(x, na.rm=TRUE)
-  # x <- sweep(x, 2L, xm, check.margin=FALSE)
   n <- sum(!is.na(x[,1])) # number of non-missing rows
   chain <- as.matrix(x)
   if(!is.matrix(chain) && !is.data.frame(chain))
@@ -191,14 +184,10 @@ batchSize_threshold_cpp_last <- function(x, method = "bm", g = NULL) {
   xacf = matrix(, nrow = order.max+1, ncol = p)
   last = min(n, 5e4)
   chain2 = chain[(n-last+1):n,]
-  for(i in 1:p) {
-    xacf[,i] = acf(chain2[,i], type = "covariance", lag.max = order.max, plot = FALSE,
-                 demean=TRUE, na.action = na.pass)$acf
-  }
-  # xacf <- acf(chain, type = "covariance", lag.max = order.max, plot = FALSE,
-  #               demean=TRUE, na.action = na.pass)$acf
+  xacf = sapply(1:p, function(i) acf(chain2[,i], type = "covariance", lag.max = order.max, plot = FALSE,
+                                       demean=TRUE, na.action = na.pass)$acf)
   
-  b = b = batchsize_cpp(n, p, xacf, order.max, method)
+  b = batchsize_cpp(n, p, xacf, order.max, method)
   return(b)
 }
 
