--- a/AR_methods/batchsize_constant_compare.Rmd
+++ b/AR_methods/batchsize_constant_compare.Rmd
@@ -12,7 +12,7 @@ library(rbenchmark)
 source("optimal_bs_egs/eel_data.R")
 source("optimal_bs_egs/spatio_temp_function.R")
 source("optimal_bs_egs/var1_function.R")
-sourceCpp('extra/batchsize_const.cpp')
+sourceCpp('batchsize_const.cpp')
 ```
 
 ### Adding a threshold
@@ -111,10 +111,9 @@ batchSize_threshold_cpp_const <- function(x, method = "bm", g = NULL) {
 
   if(!is.numeric(x))
     stop("'x' must be numeric")
-  if(any(is.na(x) != is.na(x[,1]))) stop("NAs in 'x' must be the same row-wise")
+  if(any(is.na(x)))
+    stop("NAs found")
   p <- ncol(x)
-  # xm <- colMeans(x, na.rm=TRUE)
-  # x <- sweep(x, 2L, xm, check.margin=FALSE)
   n <- sum(!is.na(x[,1])) # number of non-missing rows
   chain <- as.matrix(x)
   if(!is.matrix(chain) && !is.data.frame(chain))
@@ -133,15 +132,10 @@ batchSize_threshold_cpp_const <- function(x, method = "bm", g = NULL) {
     }
   }
   order.max <- min(p, n - 1L, floor(10 * log10(n))) 
-  xacf = matrix(, nrow = order.max+1, ncol = p)
-  for(i in 1:p) {
-    xacf[,i] = acf(chain[,i], type = "covariance", lag.max = order.max, plot = FALSE,
-                 demean=TRUE, na.action = na.pass)$acf
-  }
-  # xacf <- acf(chain, type = "covariance", lag.max = order.max, plot = FALSE,
-  #               demean=TRUE, na.action = na.pass)$acf
-  ci = 0.95
-  threshold = qnorm((1 + ci)/2)/sqrt(N)
+  xacf = sapply(1:p, function(i) acf(chain[,i], type = "covariance", lag.max = order.max, plot = FALSE,
+                                       demean=TRUE, na.action = na.pass)$acf)
+
+  threshold = qnorm((1.95)/2)/sqrt(n)
   b = batchsize_cpp(n, p, xacf, order.max, method, threshold)
   return(b)
 }
@@ -153,10 +147,9 @@ batchSize_threshold_cpp_last_const <- function(x, method = "bm", g = NULL, last_
 
   if(!is.numeric(x))
     stop("'x' must be numeric")
-  if(any(is.na(x) != is.na(x[,1]))) stop("NAs in 'x' must be the same row-wise")
+  if(any(is.na(x)))
+    stop("NAs found")
   p <- ncol(x)
-  # xm <- colMeans(x, na.rm=TRUE)
-  # x <- sweep(x, 2L, xm, check.margin=FALSE)
   n <- sum(!is.na(x[,1])) # number of non-missing rows
   chain <- as.matrix(x)
   if(!is.matrix(chain) && !is.data.frame(chain))
@@ -178,14 +171,10 @@ batchSize_threshold_cpp_last_const <- function(x, method = "bm", g = NULL, last_
   xacf = matrix(, nrow = order.max+1, ncol = p)
   last = min(n, last_size)
   chain2 = chain[(n-last+1):n,]
-  for(i in 1:p) {
-    xacf[,i] = acf(chain2[,i], type = "covariance", lag.max = order.max, plot = FALSE,
-                 demean=TRUE, na.action = na.pass)$acf
-  }
-  # xacf <- acf(chain, type = "covariance", lag.max = order.max, plot = FALSE,
-  #               demean=TRUE, na.action = na.pass)$acf
-  ci = 0.95
-  threshold = qnorm((1 + ci)/2)/sqrt(N)
+  xacf = sapply(1:p, function(i) acf(chain2[,i], type = "covariance", lag.max = order.max, plot = FALSE,
+                                       demean=TRUE, na.action = na.pass)$acf)
+
+  threshold = qnorm((1.95)/2)/sqrt(n)
   b = batchsize_cpp(n, p, xacf, order.max, method, threshold)
   return(b)
 }
